@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-12T01:21:09Z",
-  "count" : 13,
+  "timestamp" : "2022-05-25T08:20:36Z",
+  "count" : 12,
   "count_minmax" : [ 1, 13 ],
-  "count_prev_day_inc" : 5,
-  "count_prev_day_dec" : 0,
+  "count_decinc" : [ -1, +0 ],
   "uniques" : 6,
   "uniques_minmax" : [ 1, 6 ],
-  "uniques_prev_day_inc" : 4,
-  "uniques_prev_day_dec" : 0
+  "uniques_decinc" : [ -0, +0 ]
 }
