@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-05-24T16:23:42Z",
+  "timestamp" : "2022-05-25T08:20:36Z",
   "count_outdated" : 245,
   "uniques_outdated" : 162,
-  "count" : 292,
+  "count" : 291,
   "uniques" : 189,
   "clones" : [
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 13,
+      "count": 12,
       "count_minmax": [ 1, 13 ],
       "uniques": 6,
       "uniques_minmax": [ 1, 6 ]
